Updates the name.

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>YouTube Continue Watching</title>
+  <title>YouTube Uninterrupted</title>
   <link rel="stylesheet" href="popup.css">
 </head>
+
 <body>
   <div class="container">
     <!-- Header -->
@@ -38,7 +40,7 @@
       <!-- Info Section -->
       <div class="info-section">
         <p class="info-text">
-          This extension prevents YouTube from showing the "Continue watching?" dialog, 
+          This extension prevents YouTube from showing the "Continue watching?" dialog,
           allowing uninterrupted playback.
         </p>
       </div>
@@ -57,4 +59,5 @@
 
   <script src="popup.js"></script>
 </body>
+
 </html>
