Clean up the code + improve the CSS file.

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -49,9 +49,9 @@
     <!-- Footer -->
     <div class="footer">
       <div class="footer-links">
-        <a href="#" id="helpLink" class="footer-link">Help</a>
+        <a href="#" id="githubLink" class="footer-link">GitHub</a>
         <span class="separator">•</span>
-        <a href="#" id="aboutLink" class="footer-link">About</a>
+        <a href="#" id="addonLink" class="footer-link">Add-on Page</a>
       </div>
       <div class="version">v1.0.0</div>
     </div>
