--- a/popup/popup.html
+++ b/popup/popup.html
@@ -15,7 +15,7 @@
       <div class="icon-container">
         <img src="../icons/icon-48.png" alt="Extension Icon" class="icon">
       </div>
-      <h1>YouTube Continue Watching</h1>
+      <h1>YouTube Uninterrupted</h1>
     </div>
 
     <!-- Main Content -->
