--- a/popup/popup.html
+++ b/popup/popup.html
@@ -13,7 +13,7 @@
     <!-- Header -->
     <div class="header">
       <div class="icon-container">
-        <img src="../icons/icon-48.png" alt="Extension Icon" class="icon">
+        <img src="../icon.svg" alt="Extension Icon" class="icon">
       </div>
       <h1>YouTube Uninterrupted</h1>
     </div>
@@ -53,7 +53,7 @@
         <span class="separator">•</span>
         <a href="#" id="addonLink" class="footer-link">Add-on Page</a>
       </div>
-      <div class="version">v1.4.0</div>
+      <div class="version">v1.5.0</div>
     </div>
   </div>
 
